refactor(security): normalizar roles JWT en backend y corregir interceptor fetch en frontend